Tables in RichText: make outer frame symmetric

The right and bottom edges were off by the border width.

Fixes: QTBUG-74335
Change-Id: I9d28c26f7c523031cfaee929c7d541978fa106a2
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>